[gd_scene load_steps=27 format=3 uid="uid://cluhuyjg8gco4"]

[ext_resource type="Script" uid="uid://deslibkw6ks7e" path="res://entities/enemy/enemy.gd" id="1_im2q6"]
[ext_resource type="PackedScene" uid="uid://btlcpec1pk0f4" path="res://entities/enemy/dummy.tscn" id="5_4wwj3"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_pqhw6"]
radius = 0.73339844
height = 1.8042859

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_eaj7m"]
animation = &"1H_Ranged_Shoot"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_d50e0"]
fadein_time = 0.2
fadeout_time = 0.2

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4wwj3"]
animation = &"Hit_A"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7vrfk"]
animation = &"1H_Ranged_Aiming"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_a8fs5"]
animation = &"1H_Ranged_Aiming_Loop"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_d50e0"]
animation = &"Death_A"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_61ikd"]
animation = &"Death_A_Pose"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_721x4"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_im2q6"]
animation = &"Walking_C"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_eaj7m"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_a8fs5"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7vrfk"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4wwj3"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4ohlc"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_aqotc"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_d50e0"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3fvr7"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_im2q6"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_a8fs5"]
states/1H_Ranged_Aiming/node = SubResource("AnimationNodeAnimation_7vrfk")
states/1H_Ranged_Aiming/position = Vector2(615, 100)
states/1H_Ranged_Aiming_Loop/node = SubResource("AnimationNodeAnimation_a8fs5")
states/1H_Ranged_Aiming_Loop/position = Vector2(615, 12)
states/Death_A/node = SubResource("AnimationNodeAnimation_d50e0")
states/Death_A/position = Vector2(414, 211)
states/Death_A_Pose/node = SubResource("AnimationNodeAnimation_61ikd")
states/Death_A_Pose/position = Vector2(586, 211)
states/End/position = Vector2(1143, 109)
states/Idle/node = SubResource("AnimationNodeAnimation_721x4")
states/Idle/position = Vector2(414, 100)
states/Walking_C/node = SubResource("AnimationNodeAnimation_im2q6")
states/Walking_C/position = Vector2(365, -1)
transitions = ["Death_A", "Death_A_Pose", SubResource("AnimationNodeStateMachineTransition_eaj7m"), "Start", "Idle", SubResource("AnimationNodeStateMachineTransition_a8fs5"), "Idle", "Death_A", SubResource("AnimationNodeStateMachineTransition_7vrfk"), "Start", "Death_A", SubResource("AnimationNodeStateMachineTransition_4wwj3"), "Idle", "1H_Ranged_Aiming", SubResource("AnimationNodeStateMachineTransition_4ohlc"), "1H_Ranged_Aiming", "1H_Ranged_Aiming_Loop", SubResource("AnimationNodeStateMachineTransition_aqotc"), "1H_Ranged_Aiming_Loop", "Idle", SubResource("AnimationNodeStateMachineTransition_d50e0"), "Idle", "Walking_C", SubResource("AnimationNodeStateMachineTransition_3fvr7"), "Walking_C", "Idle", SubResource("AnimationNodeStateMachineTransition_im2q6")]
graph_offset = Vector2(-44, -70.79835)

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_4wwj3"]
fadein_time = 0.2
fadeout_time = 0.2

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_d50e0"]
graph_offset = Vector2(-512.39453, 27.80481)
nodes/output/position = Vector2(900, 180)
nodes/MovementStateMachine/node = SubResource("AnimationNodeStateMachine_a8fs5")
nodes/MovementStateMachine/position = Vector2(-320, 140)
nodes/HitOneShot/node = SubResource("AnimationNodeOneShot_d50e0")
nodes/HitOneShot/position = Vector2(169.28989, 139.3827)
nodes/Hit_A/node = SubResource("AnimationNodeAnimation_4wwj3")
nodes/Hit_A/position = Vector2(-220, 340)
nodes/ShootOneShot/node = SubResource("AnimationNodeOneShot_4wwj3")
nodes/ShootOneShot/position = Vector2(580, 140)
nodes/1H_Ranged_Shoot/node = SubResource("AnimationNodeAnimation_eaj7m")
nodes/1H_Ranged_Shoot/position = Vector2(300, 420)
node_connections = [&"output", 0, &"ShootOneShot", &"HitOneShot", 0, &"MovementStateMachine", &"HitOneShot", 1, &"Hit_A", &"ShootOneShot", 0, &"HitOneShot", &"ShootOneShot", 1, &"1H_Ranged_Shoot"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_p7g5j"]
radius = 0.37060547
height = 1.7832031

[sub_resource type="SphereShape3D" id="SphereShape3D_4wwj3"]
radius = 5.0

[node name="Enemy" type="CharacterBody3D" node_paths=PackedStringArray("dummy", "hitbox", "enemyBody", "shootTimer", "ray", "weapon", "navigation_agent", "walkTimer") groups=["enemies"]]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_im2q6")
dummy = NodePath("Dummy")
hitbox = NodePath("Hitbox/CollisionShape3D")
enemyBody = NodePath("body")
shootTimer = NodePath("Timers/ShootTimer")
ray = NodePath("Dummy/Rig/Skeleton3D/BoneAttachment3D/pointer/ShotRaycast")
weapon = NodePath("Dummy/Rig/Skeleton3D/BoneAttachment3D/pointer/pew")
navigation_agent = NodePath("NavigationAgent3D")
walkTimer = NodePath("Timers/WalkTimer")

[node name="body" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.885943, 0)
shape = SubResource("CapsuleShape3D_pqhw6")

[node name="Dummy" parent="." node_paths=PackedStringArray("animationTree", "animationPlayer") instance=ExtResource("5_4wwj3")]
animationTree = NodePath("AnimationTree")
animationPlayer = NodePath("AnimationPlayer")

[node name="Skeleton3D" parent="Dummy/Rig" index="0"]
bones/0/rotation = Quaternion(0, 1.19209275e-07, 0, 1)
bones/1/position = Vector3(0, 0.38888332, 0)
bones/1/rotation = Quaternion(-1.11122646e-10, 0.043157756, 2.57241e-09, 0.9990683)
bones/2/rotation = Quaternion(-1.2390451e-17, 7.1054274e-15, -1.1209479e-16, 1)
bones/3/rotation = Quaternion(-5.451663e-18, -4.2351647e-22, -1.120948e-16, 1)
bones/4/position = Vector3(0.21200736, 0.13413203, 7.958496e-08)
bones/4/rotation = Quaternion(-0.55887, -0.06005945, -0.642478, 0.52084476)
bones/5/rotation = Quaternion(4.3628976e-08, -4.7763784e-08, -0.4989884, 0.8666087)
bones/7/rotation = Quaternion(-0.32129863, -0.3273373, 0.1469234, 0.8763739)
bones/8/position = Vector3(9.699541e-11, 0.09612522, -0.05750002)
bones/8/rotation = Quaternion(0.00014897938, 0.00014896241, -0.7065599, 0.7076533)
bones/9/position = Vector3(-0.21200739, 0.13413203, 8.3162696e-08)
bones/9/rotation = Quaternion(-0.6172067, 0.0800187, 0.61682266, 0.4818536)
bones/10/rotation = Quaternion(2.0961222e-08, 5.993006e-08, 0.52200073, 0.852945)
bones/12/rotation = Quaternion(-0.31965324, 0.30273515, -0.22862616, 0.86827606)
bones/13/position = Vector3(-1.0718092e-09, 0.096125156, -0.057500023)
bones/13/rotation = Quaternion(0.00041840036, 0.00049281097, 0.70667297, 0.70754)
bones/14/rotation = Quaternion(-5.80608e-11, -0.031341746, -1.880125e-09, 0.99950874)
bones/15/position = Vector3(0.17094505, 0.11358728, 1.0396902e-08)
bones/15/rotation = Quaternion(0.99338645, 0.08336351, 0.0745865, 0.025897842)
bones/16/rotation = Quaternion(0.23453131, 6.563314e-08, -1.5868162e-07, 0.9721086)
bones/17/rotation = Quaternion(-0.53779733, -0.20829503, 0.049604908, 0.8154303)
bones/18/rotation = Quaternion(7.105397e-05, 0.9202213, -0.39139864, -1.6025391e-05)
bones/19/position = Vector3(-0.17094505, 0.11358728, 1.499408e-08)
bones/19/rotation = Quaternion(0.99657995, -0.030067554, 0.031236647, 0.07034723)
bones/20/rotation = Quaternion(0.30307433, -6.3478176e-08, 2.1038649e-07, 0.952967)
bones/21/rotation = Quaternion(-0.5744949, 0.11430704, -0.0110570965, 0.81041175)
bones/22/rotation = Quaternion(-8.9349276e-05, 0.9202217, -0.39139766, 2.0291838e-05)
bones/23/position = Vector3(0.17094491, 0.2923103, 0.5758125)
bones/23/rotation = Quaternion(0.7071068, -2.2930234e-07, -4.6055156e-08, 0.7071068)
bones/24/position = Vector3(0.20218208, 0.025990263, 0.20518115)
bones/24/rotation = Quaternion(-0.7071068, -7.052851e-08, -7.0528486e-08, 0.7071068)
bones/25/position = Vector3(2.5596094e-08, 0.36283267, -2.4286129e-15)
bones/25/rotation = Quaternion(9.6579225e-09, 1.7795516e-09, 0.98571914, -0.1683977)
bones/26/position = Vector3(-1.5574136e-08, 0.21343614, -1.0534966e-08)
bones/26/rotation = Quaternion(-1.02578326e-07, 0.39108434, 0.92035484, -3.295464e-08)
bones/27/position = Vector3(2.5820137e-09, 0.16565005, -1.960292e-08)
bones/28/rotation = Quaternion(1, 1.0206753e-09, 1.9196605e-07, 1.0244548e-08)
bones/30/position = Vector3(-0.17094518, 0.2923103, 0.5758124)
bones/30/rotation = Quaternion(0.7071068, -3.82385e-08, 1.4500867e-07, 0.7071068)
bones/31/position = Vector3(-0.1709451, 0.025990263, 0.2457893)
bones/32/position = Vector3(2.4015051e-08, 0.36283267, 2.4286129e-15)
bones/32/rotation = Quaternion(-5.8358944e-09, 6.4383693e-10, 0.9948094, 0.10175614)
bones/33/position = Vector3(5.9619847e-09, 0.21343614, -3.9266137e-09)
bones/33/rotation = Quaternion(-1.0060663e-07, 0.39108434, 0.92035484, -2.8069156e-08)
bones/34/position = Vector3(1.9620735e-08, 0.16565004, 2.8212537e-09)
bones/35/rotation = Quaternion(1, -4.058572e-09, 1.907939e-07, -6.519259e-09)
bones/38/position = Vector3(0.5208407, 0.78678274, -0.05763735)
bones/38/rotation = Quaternion(-0.7946268, 1.2665987e-07, -0.60709834, 2.2351742e-08)
bones/40/position = Vector3(-0.5108437, 0.7867826, 0.059736922)
bones/40/rotation = Quaternion(-0.7582528, -1.0803343e-07, 0.6519608, 4.842878e-08)

[node name="head" parent="Dummy/Rig/Skeleton3D" index="0"]
transform = Transform3D(0.9997204, -1.4014344e-09, 0.023646597, 1.3934143e-09, 0.99999994, 3.5568645e-10, -0.023646597, -3.2263747e-10, 0.9997204, -4.303854e-09, 1.2246454, 1.5463912e-15)

[node name="chest" parent="Dummy/Rig/Skeleton3D" index="1"]
transform = Transform3D(0.9962748, -5.1496163e-09, 0.08623532, 5.130434e-09, 0.99999994, 4.440771e-10, -0.08623532, 1.8196805e-15, 0.9962748, -2.9196552e-09, 0.9558488, 1.0572674e-15)

[node name="BoneAttachment3D" parent="Dummy/Rig/Skeleton3D" index="8"]
transform = Transform3D(0.000288516, -0.15116824, -0.98850787, -0.99999905, -0.0012256497, -0.00010417487, -0.0011959502, 0.98850685, -0.15116857, -0.49096113, 0.639722, 0.10685854)

[node name="AnimationTree" type="AnimationTree" parent="Dummy"]
tree_root = SubResource("AnimationNodeBlendTree_d50e0")
anim_player = NodePath("../AnimationPlayer")
parameters/HitOneShot/active = false
parameters/HitOneShot/internal_active = false
parameters/HitOneShot/request = 0
parameters/ShootOneShot/active = false
parameters/ShootOneShot/internal_active = false
parameters/ShootOneShot/request = 0

[node name="Hitbox" type="Area3D" parent="." groups=["enemy_hitboxes"]]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.89160156, 0)
shape = SubResource("CapsuleShape3D_p7g5j")

[node name="Timers" type="Node" parent="."]

[node name="ShootTimer" type="Timer" parent="Timers"]
wait_time = 3.0

[node name="WalkTimer" type="Timer" parent="Timers"]
wait_time = 3.0
autostart = true

[node name="DetectionArea" type="Area3D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionArea"]
shape = SubResource("SphereShape3D_4wwj3")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[connection signal="timeout" from="Timers/ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="Timers/WalkTimer" to="." method="_on_walk_timer_timeout"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]

[editable path="Dummy"]
[editable path="Dummy/Rig/Skeleton3D/BoneAttachment3D/pointer/pew"]
